<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/profil" />
        <item
            android:id="@+id/nav_pocetna"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/pocetna" />
        <item
            android:id="@+id/nav_buducap"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/buducaPutovanja" />
        <item
            android:id="@+id/nav_proslap"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/proslaPutovanja" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_kontakt"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/kontakt" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
